# MacroPhage

./: .gitattributes  .gitignore  Cargo.toml
.github/workflows/: compile-for-platform.yml
assets/: test_map.json
assets/3DArt/Avatar Phage/: Avatar Phage.glb  AvatarPhageDefault.FBX
assets/3DArt/Avatar Phage/Animated Phage/: Avatar Phage.gltf  AvatarPhageDefault.FBX
assets/3DArt/Cell/: Cell.gltf
assets/3DArt/Cell Variations/: Cell Var 1.fbx  Cell Var 1.gltf  Cell Var 2.fbx  Cell Var 2.gltf  Cell Var 3.fbx  Cell Var 3.gltf
assets/3DArt/Cosmetics Avatar Phage/: AntennaCosmetic.FBX
assets/3DArt/Nexus/: Nexus.fbx  Nexus.gltf
assets/3DArt/Recombinators/: Recombinator.fbx  Recombinator.gltf
assets/3DArt/Replicator/: Replicator.fbx  Replicator.gltf
assets/maps/: dummy_map.json  test_map.json  test_map2.json
assets/meshes/: Antenna.glb  Avatar Phage.glb  CowboyHat.glb  crown.glb
src/: input_management.rs  lib.rs  main.rs  map.rs
src/audio/: mod.rs
src/game/: controller.rs  gamerunner.rs  map.rs  mod.rs  mutationinput.rs  settings.rs
src/net/: client.rs  gamehost.rs  mod.rs  punchthrough.rs
src/shaders/: scrolling_material.rs
src/ui/: connect_to_lobby.rs  game.rs  gamelobby.rs  mainmenu.rs  mod.rs  mousecursor_egui.rs  mousecursor_pipelined.rs  phage_select.rs  profile.rs  settingsmenu.rs
src/util/: camera.rs  mod.rs  modelloading.rs  mouse.rs  ui.rs
