[package]
name = "macrophage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3

[dependencies]
bevy = {version = "0.7", features = [
    "bevy_gilrs",
    "bevy_winit",
    "render",
    "png",
    "jpeg",
    "hdr",
    "vorbis",
    "x11",
    "dynamic",
    "filesystem_watcher",
    "trace"
    ] } ## RUN WITH NIGHTLY FEATURE FOR FASTER LINKING
bevy-inspector-egui = "0.11"
bevy_asset_loader = {version = "0.11", features = ["progress_tracking"] }
iyes_progress = "0.3"
bevy_kira_audio = { version = "0.10", features = ["ogg", "mp3", "wav"] }
bevy_egui = "0.14"
strum = "0.24"
strum_macros = "0.24"
rand = "*"
bevy_mod_picking = "0.7"
leafwing-input-manager = "0.4.1"
derive_more = "*"
bevy_punchthrough = {git="https://github.com/braymatter/bevy_punchthrough", branch="master"}
serde = "1.0.140"
serde_json = "1.0.82"
bevy_flycam = "*"
dns-lookup = "1.0.8"
iyes_loopless = "0.6"